@@ -1,5 +1,5 @@
 QPKG_NAME="SortMyQPKGs"
-QPKG_VER="240427"
+QPKG_VER="240511"
 QPKG_AUTHOR="OneCD"
 QPKG_RC_NUM="500"
 QPKG_SERVICE_PROGRAM="sortmyqpkgs.sh"
